# security-design-assistant

./: .env.dev.example  .env.example  .env.local.example  .env.prod.example  .gitignore  CLAUDE.md  HANDOVER_SUMMARY.md  LICENSE  Makefile  README.md  USAGE.md  WORK_REMAINING.md  diagnose_issue.py  downloaded_schedule.xlsx  e2e-test-status.md  gemini_PDF_api.md  gemini_PDF_git.md  gemini_document_understanding.md  gemini_files_API.md  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  simple_timing_test.py  start_server_with_env.sh  story-3.5-dod-validation-report.md  story-4.3.1-completion-checklist.md  test_local.sh  view_excel_content.py
.github/: BRANCH_PROTECTION.md  CODEOWNERS
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-production.yml  deploy-staging.yml  rerun-failed.yml  validate.yml
docs/: ARCHITECTURE_CHANGE.md  SPRINT-BACKLOG-EMERGENCY-UPDATE.md  TEAM-COMMUNICATION-SDK-MIGRATION.md  e2e-troubleshooting.md  performance-validation-report.md  prompt_optimization_log.md
docs/api/: README.md
docs/architecture/: ARCHITECT-ACTION-REQUIRED.md  architecture-review-report.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  gemini-sdk-migration-plan.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  rest-api-spec.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/deployment/: README.md  branch-protection-setup.md  environment-promotion.md  github-actions-secrets-setup.md  production-deployment-validation.md  real-deployment-checklist.md  rollback-procedures.md  staging-deployment-validation.md
docs/prd/: checklist-results-report.md  epic-1-minimal-working-pipeline.md  epic-2-accuracy-context-enhancement.md  epic-3-production-infrastructure-serverless-architecture.md  epic-4-testing-documentation-phase-1-completion.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md
docs/setup/: README.md  aws-setup.md  github-setup.md  local-development.md
docs/stories/: 0.1.story.md  1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.5.story.md  3.1.story.md  3.2.story.md  3.3.story.md  3.4.story.md  3.5.story.md  3.6.story.md  4.1.story.md  4.2.story.md  4.3.1-course-correction-request.md  4.3.1.story.md  4.3.2.story.md  4.3.3.story.md  4.3.story.md  4.4.story.md
docs/troubleshooting/: README.md
infrastructure/: buildspec.yml  cloudwatch-dashboard.json  cloudwatch-logs-insights-queries.json  dev-template.yaml  health-monitoring-dashboard.json  samconfig.toml  template.yaml
infrastructure/parameters/: dev.json  prod.json  staging.json
layer/: README.md  requirements.txt
scripts/: generate_test_variations.py  prompt_optimization.py  run_e2e_tests.sh  setup-github-secrets.sh  slack-notifications.py  start_mypy_daemon.sh  validate_types.sh  validation_suite.py
src/agents/: base_agent_v2.py  codegen_agent_v2.py  context_agent.py  context_agent_v2.py  excel_generation_agent.py  judge_agent_v2.py  schedule_agent_v2.py
src/api/: main.py  models.py  routes.py
src/config/: prompt_version_manager.py  settings.py
src/config/prompts/: judge_prompt.txt
src/lambda_functions/: dlq_processor.py  get_job_status.py  lambda_warmer.py  post_traffic_hook.py  pre_traffic_hook.py  process_drawing_api.py  process_drawing_worker.py
src/models/: __init__.py  component.py  evaluation.py  job.py
src/storage/: aws_storage.py  interface.py  local_storage.py
src/utils/: cloudwatch_metrics.py  component_pattern_matcher.py  env_cache.py  error_handlers.py  id_generator.py  judge_feedback_analyzer.py  lambda_optimization.py  pdf_processor.py  recommendations_engine.py  retry_logic.py  s3_batch_operations.py  step_functions_analysis.py  storage_manager.py  success_criteria_validator.py  usage_analysis.py  validation_report_generator.py  validators.py
tests/: MIGRATION_NOTES.md  conftest.py
tests/_archived_integration/integration/: test_consistency.py  test_context_enhancement.py  test_context_pipeline.py  test_drawing_variations.py  test_e2e.py  test_excel_generation.py  test_pdf_native_processing.py  test_pipeline.py  test_pipeline_end_to_end.py  test_prompt_versioning.py
tests/_archived_tests_future_use/: README.md
tests/_archived_unit_tests/: test_cloudwatch_metrics.py  test_component_pattern_matcher.py  test_context_classifier.py  test_dlq_processor.py  test_env_cache.py  test_error_handlers.py  test_excel_generation_agent.py  test_get_job_status.py  test_id_generator.py  test_judge_agent_v2.py  test_judge_feedback_analyzer.py  test_lambda_optimization.py  test_lambda_warmer.py  test_monitoring_config.py  test_pdf_processor.py  test_process_drawing_api.py  test_process_drawing_worker.py  test_recommendations_engine.py  test_retry_logic.py  test_routes.py  test_s3_batch_operations.py  test_s3_optimization.py  test_usage_analysis.py  test_validation_report_generator.py  test_validators.py
tests/e2e/: __init__.py  conftest.py  test_api_e2e.py  test_consistency_e2e.py  test_error_handling_e2e.py  test_full_pipeline_e2e.py
tests/evaluation/validation_suite/: report_template.md
tests/fixtures/: mock_judge_evaluations.json
tests/fixtures/expected/: baseline_schedule.json
tests/fixtures/pdfs/: README.md
tests/fixtures/validation_suite/: test_descriptions.json
tests/results/: README.md
tests/unit/test_agents/: test_context_agent.py  test_excel_generation_agent.py  test_schedule_agent_v2.py
tests/unit/test_infrastructure/: test_monitoring_config.py
tests/unit/test_lambda/: __init__.py  test_dlq_processor.py  test_get_job_status.py  test_process_drawing_api.py  test_process_drawing_worker.py
tests/unit/test_lambda_functions/: test_lambda_warmer.py
tests/unit/test_scripts/: test_validation_suite.py.skip
tests/unit/test_storage/: test_dynamodb_operations.py  test_local_storage.py  test_s3_optimization.py
(+16 files in other folders)
