[project]
name = "security-design-assistant"
version = "1.0.0"
description = "AI-powered security drawing analysis system"
requires-python = "==3.11.*"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",      # Line too long (handled by line-length)
    "F841",      # Local variable assigned but never used (can fix incrementally)
    "UP007",     # Use X | Y for type annotations (can fix incrementally)  
    "N802",      # Function name should be lowercase (settings functions)
    "N806",      # Variable in function should be lowercase (test mocks)
    "N818",      # Exception name should end with Error (existing exceptions)
    "SIM105",    # Use contextlib.suppress (can fix incrementally)
    "SIM108",    # Use ternary operator (can fix incrementally) 
    "SIM117",    # Use single with statement (can fix incrementally)
    "SIM118",    # Use key in dict (can fix incrementally)
    "B904",      # raise from err (can fix incrementally)
    "B005",      # strip() with multi-char (can fix incrementally)
    "B007",      # Loop control variable not used (can fix incrementally)
    "UP038",     # isinstance with X | Y (can fix incrementally)
    "RUF012",    # Mutable class attributes (can fix incrementally)
    "C401"       # Unnecessary generator (can fix incrementally)
]
fix = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"