[project]
name = "security-design-assistant"
version = "1.0.0"
description = "AI-powered security drawing analysis system"
requires-python = "==3.11.*"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
# All relaxed rules are now removed - full strict checking
ignore = []
fix = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Temporary relaxations for complex modules requiring more work
# TODO: Gradually remove these overrides as we fix type issues
[[tool.mypy.overrides]]
module = "src.lambda_functions.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.storage.aws_storage"  # 18 errors - complex boto3 types
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.api.routes"  # 15 errors - FastAPI complex types
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.agents.judge_agent_v2"  # 12 errors - complex Gemini API
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.agents.context_agent"  # 9 errors - docx library types
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.agents.context_agent_v2"  # 6 errors
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.agents.codegen_agent_v2"  # 4 errors
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.cloudwatch_metrics"  # 1 error - complex metrics
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.pdf_processor"  # 2 errors - PIL types
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.config.prompt_version_manager"  # 2 errors
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.validation_report_generator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.usage_analysis"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.success_criteria_validator"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.step_functions_analysis"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.recommendations_engine"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.lambda_optimization"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.judge_feedback_analyzer"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.s3_batch_operations"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.retry_logic"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.utils.error_handlers"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"